# Discord-MusicBot-RPC-Selfbot

./: .example.env  .gitignore  README.md  keep_alive.py  main.py  pyproject.toml  replit.nix  requirements.txt
deploy_handlers/: replit.sh
